<resources>
    <string name="app_name">I-Talent</string>
    <string name="title_home">Introductie</string>
    <string name="title_activities">Activiteiten</string>
    <string name="title_reflection">Reflectie</string>
    <string name="introduction_text">Ik ben Fatih, een 28-jarige introvert persoon afkomstig uit Bree. Ik ben zeer analytisch, zo los ik problemen op vanuit diverse perspectieven. Daardoor heb ik ook een oog voor details. Ik kan daarbij goed out-of-the-box denken, soms verras ik zelfs mezelf met mijn creativiteit. Mijn vader vertelt altijd met trots verhaaltjes over hoe ik bewust mijn computer kapot maakte om het dan weer te kunnen repareren. Hij vindt het geweldig dat ik zo heb leren werken met computers. Ik hou nu eenmaal van problemen oplossen, dat is ook waarom programmeren een passie is voor mij. Daarbij had ik mijn eerste website gemaakt in 2005, toen was ik amper dertien jaar oud. In mijn vrije tijd lees ik vaak artikelen over technologie, wetenschap en geschiedenis. Kennis vergaren is een verslavende hobby dat gedreven is door mijn nieuwsgierigheid. Ik leer altijd graag bij over van alles en nog wat. Ik ben vooral gefascineerd door astrofysica, deze passie is ontstaan uit mijn zelfkritische denkvermogen. Ik wil altijd weten wie ik ben en astrofysica wil weten wat het universum is. Verder lees ik graag veel boeken op mijn Kindle. Ik lees vooral graag romans van Haruki Murakami en sciencefiction. Wat nog interessant aan mij is dat ik zeven talen kan spreken waaronder Japans.
    Als programmeur werk ik het liefst aan mobiele- en webapplicaties, mar toch werk ik ook graag aan backends. Dit maakt van mij een full stack developer. Ik ontwikkel graag applicaties voor Android met de Kotlin programmeertaal. Daarbij hou ik er ook van om webapplicaties te ontwikkelen met frameworks zoals Angular en VueJS. Zoals gezegd, werk ik ook wel graag aan de backend. Dit doe ik het liefste met Jave en Spring, maar ook met .NET Core. Daarbij heb ik ook een tijdje marketing gestudeerd aan de Hogeschool PXL, ik heb deze opleiding helaas niet afgewerkt. Ik heb er wel veel aan over gehouden. Zo ben ik in staat om mijn marketingvaardigheden te verwerken in mijn applicaties. Ik kan voor een sterke SEO zorgen en ik kan ook aantrekkelijke content schrijven. Ook heb ik dankzij de opleiding van marketing een goed inzicht in het ontwerpen van gebruikerservaring en UI.
    Mijn ambitie is om een sterke ontwikkelaar te worden die flexibel is en met verschillende programmeertalen en frameworks kan omgaan. Natuurlijk wil ik mezelf specialiseren in mobiele en webapplicaties, maar ik wil zeker ook ervaring en kennis hebben van andere zaken. Ik wil graag aan de slag gaan als een full stack consultant zodat ik me kan specialiseren, maar ook ervaring kan opdoen aan verschillende frameworks en aspecten van de job.
    </string>
    <string name="introduction_title">Introductie</string>
    <string name="innovatieroute_title">Innovatieroute UI/UX</string>
    <string name="blockchain_title">Blockchain</string>
    <string name="ai_title">Artificial Intelligence</string>
    <string name="stage_title">Internationaal Stage</string>
    <string name="oneclock_title">OneClock</string>
    <string name="omnibuzz_title">Omnibuzz</string>
    <string name="button_name">GA TERUG</string>
    <string name="innovatieroute_text">Tijdens de innovatieroute hebben we geleerd over userinterface (UI) en gebruikerservaring (UX). Dit werd bereikt aan de hand van uitleg en workshops. We hebben verschillende ondernemingen bezocht om te leren over hun expertise in deze vakgebied. De innovatieroute nam enkele dagen in beslag.
Dag 1: AppWise
Op dag één bezochten we het kantoor van AppWise in Diepenbeek. Na een warme ontvangst hebben we uitleg gekregen over UI en UX, vervolgens hebben we meegedaan aan een aantal workshops en werd de dag afgesloten met een klein feestje. Als laatblijver, nadat de meerderheid van de studenten naar huis waren vertrokken, kregen we een korte rondleiding door het kantoor.

MockUps van Tinder
We hebben van AppWise vooral uitleg gekregen over gebruikerservaring in het domein van UI. Er werd ons verteld hoe gebruikerservaring een belangrijk domein is van UI. Men moet ervoor zorgen dat stappen binnen de UX en UI zo simpel mogelijk zijn en altijd snel hun doel bereiken. Na dit uitleg mochten we aan de slag gaan met een workshop. Ons opdracht was om Tinder opnieuw te ontwerpen. Dit hebben we gedaan aan de hand van handgetekende mockups. We hebben ons eigen ideeën getekend over wat er in het scherm te zien moet komen staan en welke stappen er gevolg worden om doelen te bereiken. Bij een volgende workshop hebben we gewerkt aan een customer journey mapping. Dat is een tool om te reflecteren over hoe een klant overgaat tot aankoop, welke emoties er spelen en welke problemen er ontstaan. Het is namelijk belangrijk om te weten wie je klanten zijn als je een UI/UX ontwerpt.
Dag 2: Xplore Group
Tijdens het tweede dag hebben van Xplore Group we meer en diepgaand uitleg gekregen over gebruikerservaring. Tijdens deze dag hadden we vooral meer deelgenomen aan workshops dan dat we uitleg hadden gekregen.

Verzameling van Problemen, de paarse notities zijn mijn input
Tussen alle workshops door hebben we uitleg gekregen over gebruikerservaring. Bij de workshop zijn we begonnen met het zoeken naar problemen. Iedereen van een groep moest een aantal problemen opschrijven. Het maakte niet uit wat deze problemen waren, ze konden banaal zijn. Vervolgens moest elk groep stemmen binnen de groep welke probleem we graag zouden oplossen. Ons groep had gestemd om het probleem van consumerism op te lossen. Vervolgens hebben we naar zoveel mogelijke oplossingen gezocht voor het probleem. We hebben uiteindelijk gestemd en besloten om een app te ontwikkelen dat het deeleconomie zou promoten. Uiteindelijk hebben we aan de hand van een persona de doelstellingen van mogelijke gebruikers vastgesteld.
Dag 3: Xplore Group
Op het derde en laatste dag hebben we wederom uitleg gekregen van Xplore Group over wireframes en prototyping. We zijn ook zelf aan de slag gegaan met het ontwerpen van wireframes en prototyping.

Mijn Input
Na uitleg hebben te gekregen over wireframes zijn we met de groep begonnen met het tekenen van wireframes. We hebben verder gewerkt aan de app om deeleconomie te promoten. Wireframes zijn tekeningen dat de basis vormen van het UI. Bij een wireframe worden alleen de plaatsen van knoppen, foto’s e.d. getekend zonder kleur en detail. Het is vergelijkbaar met een bouwplan van een architect. Dit wordt zo gedaan om de gebruikerservaring eerst vast te leggen vooraleer men aan de UI begint. We hebben in groep individueel wireframes met de hand getekend. We hebben van iedereen de beste elementen samengelegd. Daarna kregen we uitleg over prototyping. Prototyping is het vervolledigen van wireframes. Bij prototyping worden aan de hand van de wireframes als basis het design, kleuren schaduwen e.d. vastgelegd. We hebben aan het prototype in team online samengewerkt met de app Marvel. Ten laatste hebben we ons prototype gepresenteerd.

Resultaat van teamwork
Reflectie
Dag één vond ik een zeer geslaagde dag. Het was leerzaam om te ontdekken hoe gebruikerservaring zeer belangrijk is om een succesvolle app te ontwerpen. Ik ga de lessen van deze dag zeker gebruiken om mijn eigen Android app te verbeteren. Ten slotte vond ik het fijn om tijdens de rondleiding te ondervinden hoe een leuke groepssfeer zorgt voor een leuke werkplek. Deze dag was een sterke methode om kennis te maken met het bedrijfsleven. Het heeft me geholpen om in te zien wat ik belangrijk vind bij het zoeken naar een job.
Op dag twee vond ik het fijn om in groep te mogen werken aan de eerste stappen van UI en UX. Ik vond vooral de methode om ideeën te voor een app te vinden aan de hand van zoeken naar problemen en vervolgens oplossingen zeer handig. Ik kan me voorstellen dat ik deze methode zal gebruiken om op zoek te gaan naar nieuwe ideeën.
Op dag drie vond ik het geweldig om te zien tijdens de workshop van wireframes hoe verschillende ideeën samenkwamen tot een mooi geheel. Dit veranderde mijn mening op teamwork sterk. Ik besefte toen hoe een sterk resultaat bereikt wordt door het samenbrengen van ieders sterkte. Ik maak zelf al gebruik van prototyping voor het ontwikkelen van mijn nieuwe app. Toch was het zeker leerzaam en interessant om meer details over deze vak te mogen leren.
Deze innovatieroute was eigenlijk niet mijn eerste keuze, ik had blockchain opgegeven als eerste keuze. Maar toch ben ik blij dat ik in deze route terecht ben gekomen. Ik heb veel zaken geleerd dat ik ga gebruiken bij het ontwikkelen van apps. En dat ben ik op het moment van schrijven al aan het doen. Voor mijn app OneClock 3 ben ik gebruik aan het maken van kennis over gebruikservaring dat ik heb geleerd en van prototyping.
</string>
</resources>